.provarCaches/00D410000011HE0EAM/objects/rstk__icdreq__c.object
<CustomObject>
    <description>icdreq__c</description>
    <fields>
        <fullName>rstk__custpage_descr__c</fullName>
        <inlineHelpText>Description of the item being derived from this disassembly process.</inlineHelpText>
        <label>Item Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custpage_iccomcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Commodity Code of the item being derived from this disassembly process.</inlineHelpText>
        <label>Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components</relationshipLabel>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__custpage_item__c</fullName>
        <inlineHelpText>The Item number for the component being derived from this disassembly process.</inlineHelpText>
        <label>Derived Component Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_defaultproject__c</fullName>
        <formula>rstk__icdreq_div__r.rstk__sydiv_dflthomeproj__c</formula>
        <inlineHelpText>Default Project</inlineHelpText>
        <label>Home Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icdreq_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__icdreq_wocst__r.rstk__wocst_ordno__c + &apos;_&apos; +  rstk__icdreq_item__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icdreq_item__r.Name</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_actqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The actual yield obtained in the disassembly process for this component.</inlineHelpText>
        <label>Actual Yield Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_calccostpct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated Cost Allocation Percent</inlineHelpText>
        <label>Cost Allocation Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_coreitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Core Item associated with the Disassembly Component</inlineHelpText>
        <label>Core Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dercostpct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Derived Cost Allocation Percent</inlineHelpText>
        <label>Derived Cost Allocation Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disgoodlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Location ID for Good Quantity received</inlineHelpText>
        <label>Disassy Good Loc ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Disassy Good Loc ID not valid for specified Site.</errorMessage>
            <filterItems>
                <field>$Source.rstk__icdreq_qtydisgood__c</field>
                <operation>equals</operation>
                <value>0</value>
            </filterItems>
            <filterItems>
                <field>rstk__sylocid__c.rstk__sylocid_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__icdreq_div__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.rstk__icdreq_qtydisgood__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components (Disassy Good Loc ID)</relationshipLabel>
        <relationshipName>icdreqs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disgoodlocnum__c</fullName>
        <inlineHelpText>Location Number for Good Quantity received</inlineHelpText>
        <label>Disassy Good Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disncmlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Stock Location ID for this Component if it is deemed to be Non-conforming (NCM)</inlineHelpText>
        <label>Disassy NCM Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>icdreqs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disncmlocnum__c</fullName>
        <inlineHelpText>This is the Stock Location Number for this Component if it is deemed to be Non-conforming (NCM)</inlineHelpText>
        <label>Disassy NCM Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disrcvlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Receiving Location ID for this Disassembly Component</inlineHelpText>
        <label>Disassy Rec Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disrcvlocnum__c</fullName>
        <inlineHelpText>This is the Receiving Location Number for this Disassembly Component</inlineHelpText>
        <label>Disassy Rec Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disscraplocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Scrap Location ID for this Disassembly Component</inlineHelpText>
        <label>Disassy Scrap Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>icdreqs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_disscraplocnum__c</fullName>
        <inlineHelpText>This is the Scrap Location Number for this Disassembly Component</inlineHelpText>
        <label>Disassy Scrap Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Division associated with the Derived Component</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components (Division)</relationshipLabel>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Freight</inlineHelpText>
        <label>Comp Deductions, Freight</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Outside Labor</inlineHelpText>
        <label>Comp Deductions, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Material</inlineHelpText>
        <label>Comp Deductions, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Fringe Overhead</inlineHelpText>
        <label>Comp Deductions, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Outside Labor Overhead</inlineHelpText>
        <label>Comp Deductions, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Machine Overhead</inlineHelpText>
        <label>Comp Deductions, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Overhead Material</inlineHelpText>
        <label>Comp Deductions, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Other Indirect Costs</inlineHelpText>
        <label>Comp Deductions, Other Indirect</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Subcontracted Labor</inlineHelpText>
        <label>Comp Deductions, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_dmddolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Subcontracted Material</inlineHelpText>
        <label>Comp Deductions, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_duedte__c</fullName>
        <inlineHelpText>Order Due Date</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_enginvumcf__c</fullName>
        <inlineHelpText>This is the Engineering to Inventory Unit of Measure conversion factor.</inlineHelpText>
        <label>Eng to Inv UOM Conv Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_expqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The quantity expected to be yielded for the disassembly process for this component.</inlineHelpText>
        <label>Expected Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_height__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The thickness of this disassembly component, as defined on the Inventory Item Master, or that was added or modified directly on this record.</inlineHelpText>
        <label>Thickness</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division associated with the Disassembly Component</inlineHelpText>
        <label>Inv Div</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components (Inv Div)</relationshipLabel>
        <relationshipName>icdreqs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_invsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with the Disassembly Component</inlineHelpText>
        <label>Inv Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>icdreqs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_invuom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Inventory UOM</inlineHelpText>
        <label>Inv UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components</relationshipLabel>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Item number for the component being derived from this disassembly process.</inlineHelpText>
        <label>Derived Component Item</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Derived Component Item not valid for specified Division.</errorMessage>
            <filterItems>
                <field>rstk__icitem__c.rstk__icitem_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__icdreq_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components (Item)</relationshipLabel>
        <relationshipName>icdreqs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_length__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The length of this disassembly component, as defined on the Inventory Item Master, or that was added or modified directly on this record.</inlineHelpText>
        <label>Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_lne__c</fullName>
        <inlineHelpText>Order Line Number</inlineHelpText>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_lotexpdate__c</fullName>
        <inlineHelpText>The Lot expiration date defined for this lot of material derived from this disassembly process.</inlineHelpText>
        <label>Lot Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_lotno__c</fullName>
        <inlineHelpText>This is the Lot Number for this Disassembly Component</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_ordlne__c</fullName>
        <inlineHelpText>This is the Order Line associated with the Disassembly Component</inlineHelpText>
        <label>Order Line</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_ordno__c</fullName>
        <inlineHelpText>This is the Work Order Number associated with the Disassembly Component</inlineHelpText>
        <label>Purchase Order</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_ordsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_ordtype__c</fullName>
        <inlineHelpText>This is the Order Type for the Disassembly Component</inlineHelpText>
        <label>Order Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_origcalccostpct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Initial Cost Allocation Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the PO Line associated with the Disassembly Component</inlineHelpText>
        <label>poline</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components</relationshipLabel>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Project associated with the Disassembly Component</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtydisgood__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Received Good Quantity</inlineHelpText>
        <label>Received Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtydisncm__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity put into Non-conforming Material locations</inlineHelpText>
        <label>Qty Disp NCM</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtydisrcv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity received for this Disassembly Component</inlineHelpText>
        <label>Qty Disp Rec</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtydisscrap__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity scrapped for this Disassembly Component</inlineHelpText>
        <label>Qty Disp Scrap</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtydiswip__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity in WIP</inlineHelpText>
        <label>Qty Disp WIP</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Remaining quantity to be received.</inlineHelpText>
        <label>Qty Remaining</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>this is the Quantity Per for this Disassembly Component</inlineHelpText>
        <label>Qty Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtyplanrealized__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Planned Quantity</inlineHelpText>
        <label>Qty Plan Realized</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity for the Disassembly anticipated Component</inlineHelpText>
        <label>Qty Requested</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_qtyvariance__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Planned Quantity - Received Good Quantity</inlineHelpText>
        <label>Qty Variance</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_rejqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The quantity rejected from the disassembly process for this component.</inlineHelpText>
        <label>Rejected Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_resp2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The user responsible for this item, as defined in the corresponding Inventory Item Master.</inlineHelpText>
        <label>Responsible User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components</relationshipLabel>
        <relationshipName>Disassembly_Derived_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_resp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inventory Responsibility</inlineHelpText>
        <label>Obsolete</label>
        <referenceTo>User</referenceTo>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_serial__c</fullName>
        <inlineHelpText>This is the Serial Number for this Disassembly Component</inlineHelpText>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Site associated with the Derived Component</inlineHelpText>
        <label>Site Master</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>icdreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Freight</inlineHelpText>
        <label>Supply Deductions, Freight</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Labor</inlineHelpText>
        <label>Supply Deductions, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply Amount charged out for Material</inlineHelpText>
        <label>Supply Deductions, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Fringe</inlineHelpText>
        <label>Supply Deductions, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Overhead Labor</inlineHelpText>
        <label>Supply Deductions, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Machine Overhead</inlineHelpText>
        <label>Supply Deductions, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Overhead Material</inlineHelpText>
        <label>Supply Deductions, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Other Indirect Costs</inlineHelpText>
        <label>Supply Deductions, Other Indirect</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Subcontracted Labor</inlineHelpText>
        <label>Supply Deductions, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_supdolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Subcontracted Material</inlineHelpText>
        <label>Supply Deductions, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_totalcostbasis__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total cost basis used for calculating the value of an individual yielded unit.</inlineHelpText>
        <label>Total Cost Basis</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_totcost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Unit Cost for this Disassembly Component</inlineHelpText>
        <label>Derived Total Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_totdmddolchg__c</fullName>
        <formula>rstk__icdreq_dmddolchgoutfrght__c +
rstk__icdreq_dmddolchgoutohdfrng__c +
rstk__icdreq_dmddolchgoutlab__c +
rstk__icdreq_dmddolchgoutohdlab__c +
rstk__icdreq_dmddolchgoutohdmach__c +
rstk__icdreq_dmddolchgoutmtl__c +
rstk__icdreq_dmddolchgoutohdmtl__c +
rstk__icdreq_dmddolchgoutothlnd__c +
rstk__icdreq_dmddolchgoutsublab__c +
rstk__icdreq_dmddolchgoutsubmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Demand Costs Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_totdolchg__c</fullName>
        <formula>rstk__icdreq_dmddolchgoutfrght__c +
rstk__icdreq_dmddolchgoutohdfrng__c +
rstk__icdreq_dmddolchgoutlab__c +
rstk__icdreq_dmddolchgoutohdlab__c +
rstk__icdreq_dmddolchgoutohdmach__c +
rstk__icdreq_dmddolchgoutmtl__c +
rstk__icdreq_dmddolchgoutohdmtl__c +
rstk__icdreq_dmddolchgoutothlnd__c +
rstk__icdreq_dmddolchgoutsublab__c +
rstk__icdreq_dmddolchgoutsubmtl__c +
rstk__icdreq_supdolchgoutfrght__c +
rstk__icdreq_supdolchgoutohdfrng__c +
rstk__icdreq_supdolchgoutlab__c +
rstk__icdreq_supdolchgoutohdlab__c +
rstk__icdreq_supdolchgoutohdmach__c +
rstk__icdreq_supdolchgoutmtl__c +
rstk__icdreq_supdolchgoutohdmtl__c +
rstk__icdreq_supdolchgoutothlnd__c +
rstk__icdreq_supdolchgoutsublab__c +
rstk__icdreq_supdolchgoutsubmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Costs Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_totsupdolchg__c</fullName>
        <formula>rstk__icdreq_supdolchgoutfrght__c +
rstk__icdreq_supdolchgoutohdfrng__c +
rstk__icdreq_supdolchgoutlab__c +
rstk__icdreq_supdolchgoutohdlab__c +
rstk__icdreq_supdolchgoutohdmach__c +
rstk__icdreq_supdolchgoutmtl__c +
rstk__icdreq_supdolchgoutohdmtl__c +
rstk__icdreq_supdolchgoutothlnd__c +
rstk__icdreq_supdolchgoutsublab__c +
rstk__icdreq_supdolchgoutsubmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Supply Costs Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_unitcost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Unit Cost for this Disassembly Component</inlineHelpText>
        <label>Derived Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_unitcostbasis__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The per unit cost basis used for calculating the value of an individual yielded unit.</inlineHelpText>
        <label>Unit Cost Basis</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_wbs__c</fullName>
        <inlineHelpText>This is the Work Breakdown Structure (WBS) associated with the Disassembly Component</inlineHelpText>
        <label>Job Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_weight__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The weight of this disassembly component, as defined on the Inventory Item Master, or that was added or modified directly on this record.</inlineHelpText>
        <label>Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_width__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The width of this disassembly component, as defined on the Inventory Item Master, or that was added or modified directly on this record.</inlineHelpText>
        <label>Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_wocst__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Work Order Number</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Disassembly Derived Components</relationshipLabel>
        <relationshipName>Disassembly_Derived_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdreq_yldfctr__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This is the Yield Factor for the Disassembly anticipated Component</inlineHelpText>
        <label>Yield</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>